word_match/static/css/app.css
@font-face {
  font-family: Fredoka;
  src: url('/static/fonts/fredoka.ttf');
}

@font-face {
  font-family: OpenSans;
  src: url('/static/fonts/OpenSans-Regular.ttf');
}

/* https://coolors.co/9d44b5-b2b1cf-d7cdcc-badefc-ffffff */

body {
  background-color: #BADEFC;
}

.space-up { margin-top: 1em }
.pad-left { padding-left: 1em }

#title {
  font-family: Fredoka;
  font-size: 4em;
  padding: .4em;
}

#title a{
  color: white;
}

.dark-background {
  background-color: #444;
}

/* PLAY */

#left-container { 
  padding-right: 0em;
}

#right-container { 
  padding-left: 0em;
}

.game-tile {
   border: 2px solid black;
   padding-bottom: 1em;
   padding-top: 1em;
   font-family: OpenSans;
   background-color: #444;
   color: white;
}

.game-tile h1,
.game-tile h2,
.game-tile h3,
.game-tile h4 {
  font-family: Fredoka;
}

.game-tile a {
  color: #999;
  font-weight: bold;
}

#chat-tile {
   padding-top: 1em;
   padding-bottom: 1em;
   border: 2px solid black
}

#chat-messages {
   height: 15em;
   overflow:auto;
 }

#roster {
  height: 18em;
}

#game-area {
  padding: 1em 0em 1em 1em;
}

#card-field {
  padding-left: 2em;
  height: 20em;
}

#my-deck {
  margin-left: 2em;
  min-height: 22em;
}

.player-card {
  padding: 1em .5em .5em 1em;
  cursor: pointer;
}

.player-card a {
  color: #FFF;
}

.player-card.up {
  border-radius: 1em;
  background-color: #D7CDCC;
  border:.5em solid #9D44B5;
  color: black;
  font-family: OpenSans;
  font-size: 1.2em;
  height: 8em;
  margin: 1em .5em .5em -2em;
  width: 15em;
  overflow: auto;
}

.player-card.down {
  background-color: #9D44B5;
  border-radius: .6em;
  border:.3em solid #D7CDCC;
  color: white;
  font-family: Fredoka;
  font-size: 2em;
  height: 4.8em;
  margin: .6em .3em .3em -1.2em;
  padding-top: 1.5em;
  text-align: center;
  width: 9em;
}

.prompt-card {
  background-color: #D7CDCC;
  border-radius: 1em;
  border:.5em solid #449DB5;
  color: black;
  font-family: OpenSans;
  font-size: 1.2em;
  height: 12em;
  margin: 1em .5em .5em -.5em;
  overflow-y: auto;
  overflow-x: hidden;
  padding: .5em 0em 0em .5em;
  width: 10em;
}

.player-card.selected {
  margin-top: .5em;
}

.chat-time {
  float: right;
}

